Fix for Raspberry Pi layout issue

--- a/electron-app/src/client/style.css
+++ b/electron-app/src/client/style.css
@@ -103,7 +103,7 @@
     width: 100;
     font-family: "Roboto";
     font-weight: bold;
-    font-size: 10px;
+    font-size: 15px;
     letter-spacing: 1px;
     text-decoration-line: none;
     text-align: center;
@@ -117,8 +117,8 @@
     border-radius: 10px;
     margin: auto;
     margin-top: 30px;
-    height: 150;
-    width: 150;
+    height: 150px;
+    width: 120px;
     font-family: "Roboto";
     font-weight: bold;
     font-size: 18px;
